# digifi

./: .gitignore  Cargo.toml  LICENSE  README.md  cargo_commands.md
src/: consts.rs  corporate_finance.rs  error.rs  financial_instruments.rs  lattice_models.rs  lib.rs  market_making.rs  monte_carlo.rs  plots.rs  portfolio_applications.rs  probability_distributions.rs  random_generators.rs  statistics.rs  stochastic_processes.rs  technical_indicators.rs  utilities.rs
src/corporate_finance/: capm.rs
src/financial_instruments/: bonds.rs  derivatives.rs  rates_and_swaps.rs  stocks.rs
src/lattice_models/: binomial_models.rs  trinomial_models.rs
src/market_making/: amm.rs  order_book.rs
src/portfolio_applications/: portfolio_composition.rs  portfolio_performance.rs  portfolio_taxonomy.rs  risk_measures.rs  utility_functions.rs
src/random_generators/: generator_algorithms.rs  standard_normal_generators.rs  uniform_generators.rs
src/statistics/: arima.rs  autocorrelation.rs  beta.rs  continuous_distributions.rs  discrete_distributions.rs  gamma.rs  linear_regression_analysis.rs  mediation_analysis.rs  stat_tests.rs
src/statistics/arima/: ar.rs
src/statistics/stat_tests/: adf_test.rs  f_test.rs  granger_causality.rs  t_test.rs
src/stochastic_processes/: jump_diffusion_models.rs  standard_stochastic_models.rs  stochastic_process_generator.rs  stochastic_volatility_models.rs
src/stochastic_processes/stochastic_process_generator/: sde_components.rs  stochastic_drift_components.rs
src/utilities/: data_transformations.rs  feature_collection.rs  general_utils.rs  loss_functions.rs  maths_utils.rs  minimal_spanning_tree.rs  numerical_engines.rs  sample_data.rs  time_value_utils.rs
src/utilities/numerical_engines/: golden_ratio.rs  gradient_descent.rs  l_bfgs.rs  nelder_mead.rs
