[package]
name = "digifi"
version = "2.0.0"
edition = "2021"
description = "General purpose financial library and framework for financial modelling, portfolio optimization, and asset pricing."
license = "MIT OR Apache-2.0"
homepage = "https://github.com/Digital-Finance-DigiFi/digifi"
repository = "https://github.com/Digital-Finance-DigiFi/digifi"
documentation = "https://docs.rs/digifi"
keywords = ["stochastic", "portfolio", "pricing", "investment", "asset"]
categories = ["finance", "mathematics", "science", "simulation"]
exclude = ["cargo_commands.md"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = "0.15.6" # MIT or Apache 2.0
nalgebra = "0.33.0" # Apache 2.0
# Optional dependencies
# plotly = { version = "0.11.0", optional = true, features = ["plotly_ndarray"] } # MIT

[features]
# default = ["sample_data"]
sample_data = []
# plotly = ["dep:plotly"]