[package]
name = "digifi"
version = "3.0.0"
edition = "2021"
description = "General purpose financial library and framework for financial modelling, portfolio optimization, and asset pricing."
license = "MIT OR Apache-2.0"
homepage = "https://github.com/Digital-Finance-DigiFi/digifi"
repository = "https://github.com/Digital-Finance-DigiFi/digifi"
documentation = "https://docs.rs/digifi"
keywords = ["stochastic", "portfolio", "pricing", "investment", "asset"]
categories = ["finance", "mathematics", "science", "simulation"]
exclude = ["cargo_commands.md"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = { version = "0.16.1", features = ["serde"] } # MIT or Apache 2.0
nalgebra = { version = "0.34" } # Apache 2.0
# Optional dependencies
serde = { version = "1.0.225", optional = true, features = ["derive"] } # MIT or Apache 2.0
plotly = { version = "0.13.1", optional = true, features = ["plotly_ndarray"] } # MIT

[features]
# default = ["sample_data", "serde", "plotly"]
sample_data = []
serde = ["dep:serde"]
plotly = ["dep:plotly"]